# leaf-ai

./: .gitignore  docker-compose.yml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  db.py  main.py  models.py
apps/api/app.egg-info/: SOURCES.txt
apps/api/app/routers/: campaigns.py  ingest.py  inventory.py  sales.py
apps/web/: package-lock.json  package.json  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/lib/: api.ts
apps/web/src/app/panel/: page.tsx
apps/web/src/lib/: api.ts
